footer and back to top button

--- a/architecture/other_academic_works/index.html
+++ b/architecture/other_academic_works/index.html
@@ -70,61 +70,61 @@
       <br>
       <br>
       <br>
-      <img src="./factory_site1.jpg" alt="Renovation of a Factory Building" >
-      <br>
-      <br>
-      
-      <div class = container-body-project-img>
-      <img src="./factory_diagram5.jpg" alt="Renovation of a Factory Building" >
-      <br>
-      <br>
-      <br>
-      <br>
-      <img src="./factory_site2.jpg" alt="Renovation of a Factory Building" >
-      <br>
-      <br>
-      <br>
-      <br> 
-      <img src="./factory_site3.jpg" alt="Renovation of a Factory Building" >
-
-      <br>
-      <br>
+      <img src="./factory_site1.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
 
+      <div class=container-body-project-img>
+        <img src="./factory_diagram5.jpg" alt="Renovation of a Factory Building">
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="./factory_site2.jpg" alt="Renovation of a Factory Building">
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="./factory_site3.jpg" alt="Renovation of a Factory Building">
+
+        <br>
+        <br>
+        <br>
+        <br>
 
 
-      <img src="./factory_diagram3.jpg" alt="Renovation of a Factory Building" >
 
-      <br>
-      <br>
-      <img src="./factory_diagram4.jpg" alt="Renovation of a Factory Building" >
-      <br>
-      <br>
-    </div>
+        <img src="./factory_diagram3.jpg" alt="Renovation of a Factory Building">
 
-      <img src="./factory_diagram8.jpg" alt="Renovation of a Factory Building" >
+        <br>
+        <br>
+        <img src="./factory_diagram4.jpg" alt="Renovation of a Factory Building">
+        <br>
+        <br>
+      </div>
+
+      <img src="./factory_diagram8.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
       <br>
       <br>
-      <img src="./factory_massing.jpg" alt="Renovation of a Factory Building" >
+      <img src="./factory_massing.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
       <br>
       <br>
       <br>
       <br>
-      <img src="./factory_diagram2.jpg" alt="Renovation of a Factory Building" >
+      <img src="./factory_diagram2.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
       <br>
       <br>
       <br>
       <br>
-      <img src="./factory_render.jpg" alt="Renovation of a Factory Building" >
+      <img src="./factory_render.jpg" alt="Renovation of a Factory Building">
       <br>
-      <img src="./factory_render1.jpg" alt="Renovation of a Factory Building" >
+      <img src="./factory_render1.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
       <br>
@@ -132,26 +132,26 @@
       <br>
       <br>
 
-      <img src="./factory_diagram.jpg" alt="Renovation of a Factory Building" >
+      <img src="./factory_diagram.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
       <br>
       <br>
-      <div class = container-body-project-img>
+      <div class=container-body-project-img>
 
-      <img src="./factory_diagram7.jpg" alt="Renovation of a Factory Building" >
-      <br>
-      <br>
-      <br>
-      <br>
-      <img src="./factory_diagram6.jpg" alt="Renovation of a Factory Building" >
-      <br>
-      <br>
-      <br>
-      <br>
-    </div>
+        <img src="./factory_diagram7.jpg" alt="Renovation of a Factory Building">
+        <br>
+        <br>
+        <br>
+        <br>
+        <img src="./factory_diagram6.jpg" alt="Renovation of a Factory Building">
+        <br>
+        <br>
+        <br>
+        <br>
+      </div>
 
-      <img src="./factory_facade.jpg" alt="Renovation of a Factory Building " >
+      <img src="./factory_facade.jpg" alt="Renovation of a Factory Building ">
       <br>
       <br>
       <br>
@@ -173,33 +173,33 @@
       <br>
       <br>
       <br>
-      <img src="./village2.jpg" alt="Renovation of a Factory Building" >
+      <img src="./village2.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
       <br>
       <br>
       <br>
       <br>
-      <img src="./village.jpg" alt="Renovation of a Factory Building" >
+      <img src="./village.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
       <br>
       <br>
       <br>
       <br>
-      <img src="./village1.jpg" alt="Renovation of a Factory Building" >
+      <img src="./village1.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
       <br>
       <br>
 
-      <div class = container-body-project-img> <img src="./village3.jpg" alt="Renovation of a Factory Building" >
+      <div class=container-body-project-img> <img src="./village3.jpg" alt="Renovation of a Factory Building">
       </div>
       <br>
       <br>
       <br>
       <br>
-      <img src="./village4.jpg" alt="Renovation of a Factory Building" >
+      <img src="./village4.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
       <br>
@@ -208,72 +208,57 @@
 
       <br>
       <br>
-      <img src="./village5.jpg" alt="Renovation of a Factory Building" >
+      <img src="./village5.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
 
 
-      <img src="./village6.jpg" alt="Renovation of a Factory Building" >
+      <img src="./village6.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
 
       <br>
       <br>
 
-      <img src="./village7.jpg" alt="Renovation of a Factory Building" >
+      <img src="./village7.jpg" alt="Renovation of a Factory Building">
       <br>
       <br>
-
-
-
-
     </div>
-
-
-
-
-
-
+    <!--back to top-->
+    <button id="myBtn" title="Back to top">
+      <div id="dad">
+        <div id="bro">
+          <img id="bottom-arrow" class="" src="../../icon/arrow-top.svg" alt="back to top">
+        </div>
+        <div id="sis">
+          <h4>TOP</h4>
+        </div>
+      </div>
+    </button>
+    <!--back to top-->
     <!--footer-->
-    <div class="container_footer">
-
-      <div id="infor">
-        <div>
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
-          </a>
-
-        </div>
-        <div>
-          <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
-            <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
-              alt="linkedin">
-          </a>
-        </div>
-
-        <div>
-          <a href="https://github.com/vicky-wyq">
-            <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg"
-              alt="github">
-          </a>
-        </div>
-
-        <div>
-          <a href="https://medium.com/@vickywang.design">
-            <img class="image_footer"
-              src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg"
-              alt="medium">
-          </a>
+    <footer class="Grey100Bg">
+      <div class="">
+        <div class="footer">
+          <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
+          <div class="footer-right">
+            <a href="mailto:vickyw.design@gmail.com">
+              <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+            </a>
+            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
+              <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+            </a>
+            <a target="_blank" href="https://github.com/vicky-wyq">
+              <img class="footer-logo" src="../../icon/git.svg" alt="github">
+            </a>
+            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+              <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+            </a>
+          </div>
         </div>
       </div>
+    </footer>
 
-      <p class="lighter_font">COPYRIGHT &#169; VICKY WANG
-      </p>
-
-    </div>
 </body>
 
 </html>
