--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -20,15 +20,15 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--font using hello-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Catamaran', sans-serif; -->
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
 
 
@@ -40,21 +40,17 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
 
-  <script type="text/javascript"
-    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
+  <script type="text/javascript" src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
   <!-- gsap -tool-bar-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
+  <script type="text/javascript" src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
   <!-- gsap - tool-bar-->
 
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
   <!-- gsap - ScrollTrigger-->
   <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
   <!-- gsap - ScrollTrigger-->
@@ -87,8 +83,7 @@
   <meta property="og:description" content="Hi! Thanks for stopping by. 
         I enjoy design and code who loves solving challenging problems. 
         Interested in what you see? Shoot me an email :) " />
-  <meta property="og:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
@@ -123,14 +118,12 @@
         <ul class="nav-menu">
           <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
           </li>
-          <li class="nav-item active greenNav marginZero"><a href="/architecture"
-              class="nav-link box">ARCHITECTURE</a>
+          <li class="nav-item active greenNav marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/photography"
               class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/about"
-              class="nav-link box font300-1080 ">ABOUT</a>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
           </li>
         </ul>
       </div>
@@ -635,49 +628,48 @@
 
 
 
+
+
+
+
+
+  <!--body-->
+
+  <!--back to top-->
+  <button id="myBtn" title="Back to top">
+    <div id="dad">
+      <div id="bro">
+        <img id="bottom-arrow" class="" src="../../icon/arrow-top.svg" alt="back to top">
+      </div>
+      <div id="sis">
+        <h4>TOP</h4>
+      </div>
+    </div>
+  </button>
+  <!--back to top-->
+  <!--footer-->
+  <footer class="Grey100Bg">
+    <div class="">
+      <div class="footer">
+        <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
+        <div class="footer-right">
+          <a href="mailto:vickyw.design@gmail.com">
+            <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+          </a>
+          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
+            <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+          </a>
+          <a target="_blank" href="https://github.com/vicky-wyq">
+            <img class="footer-logo" src="../../icon/git.svg" alt="github">
+          </a>
+          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+            <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
-
-
-
-
-<!--body-->
-
-
-<!--back to top-->
-<button id="myBtn" class=" myBtn-1550" title="Go to top">
-  <img id="bottom-arrow" class="ArrowHover" src="../../icon/arrow-top.svg" alt="back to top">
-
-  <div id="btnFont">TOP</div>
-
-</button>
-<!--back to top-->
-
-<!--footer-->
-<div class="Grey200Bg">
-  <div class="footer">
-    <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
-    </p>
-    <div class="footer-right">
-      <a href="mailto:vickyw.design@gmail.com">
-        <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-      </a>
-
-      <a href="https://www.linkedin.com/in/vicky-wyq/">
-        <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-      </a>
-
-      <a href="https://github.com/vicky-wyq">
-        <img class="footer-logo" src="../../icon/git.svg" alt="github">
-      </a>
-
-      <a href="https://www.instagram.com/vw_yiqi/">
-        <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-      </a>
-    </div>
-  </div>
-</div>
-<!--footer-->
-</div>
 
 </html>
