--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -402,7 +402,40 @@
   <div class="blank-lineheight-s"></div>
   <div class="blankHXL"></div>
 
-
+  <!--back to top-->
+  <button id="myBtn" title="Back to top">
+    <div id="dad">
+      <div id="bro">
+        <img id="bottom-arrow" class="" src="../../icon/arrow-top.svg" alt="back to top">
+      </div>
+      <div id="sis">
+        <h4>TOP</h4>
+      </div>
+    </div>
+  </button>
+  <!--back to top-->
+  <!--footer-->
+  <footer class="Grey100Bg">
+    <div class="">
+      <div class="footer">
+        <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
+        <div class="footer-right">
+          <a href="mailto:vickyw.design@gmail.com">
+            <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+          </a>
+          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
+            <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+          </a>
+          <a target="_blank" href="https://github.com/vicky-wyq">
+            <img class="footer-logo" src="../../icon/git.svg" alt="github">
+          </a>
+          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+            <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
@@ -410,43 +443,6 @@
 
 
 
-<!--body-->
 
-
-<!--back to top-->
-<button id="myBtn" class=" myBtn-1550" title="Go to top">
-  <img id="bottom-arrow" class="ArrowHover" src="../../icon/arrow-top.svg" alt="back to top">
-
-  <div id="btnFont">TOP</div>
-
-</button>
-<!--back to top-->
-
-<!--footer-->
-<div class="Grey200Bg">
-  <div class="footer">
-    <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
-    </p>
-    <div class="footer-right">
-      <a href="mailto:vickyw.design@gmail.com">
-        <img class="footer-logo" src="../../icon/mail.svg" alt="email">
-      </a>
-
-      <a href="https://www.linkedin.com/in/vicky-wyq/">
-        <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
-      </a>
-
-      <a href="https://github.com/vicky-wyq">
-        <img class="footer-logo" src="../../icon/git.svg" alt="github">
-      </a>
-
-      <a href="https://www.instagram.com/vw_yiqi/">
-        <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
-      </a>
-    </div>
-  </div>
-</div>
-<!--footer-->
-</div>
 
 </html>
