--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1331,45 +1331,41 @@
 
 
   <!--back to top-->
-
-
-  <botton id="myBtn">
-    <div class="Grid Grid--full u-textCenter">
-      <div class="Grid-cell">
-        <img id="bottom-arrow" class="ArrowHover" src="../icon/arrow-top.svg" alt="back to top">
-        <div>TOP</div>
+  <button id="myBtn" title="Back to top">
+    <div id="dad">
+      <div id="bro">
+        <img id="bottom-arrow" class="" src="../icon/arrow-top.svg" alt="back to top">
+      </div>
+      <div id="sis">
+        <h4>TOP</h4>
       </div>
     </div>
-  </botton>
-
+  </button>
   <!--back to top-->
-
-  <!--footer-->
-  <div class="Grey100Bg">
-
+</body>
+<!--footer-->
+<footer class="Grey100Bg">
+  <div class="">
     <div class="footer">
-      <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
-      </p>
+      <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
       <div class="footer-right">
         <a href="mailto:vickyw.design@gmail.com">
           <img class="footer-logo" src="../icon/mail.svg" alt="email">
         </a>
-
         <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
           <img class="footer-logo" src="../icon/in.svg" alt="linkedin">
         </a>
-
         <a target="_blank" href="https://github.com/vicky-wyq">
           <img class="footer-logo" src="../icon/git.svg" alt="github">
         </a>
-
         <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
           <img class="footer-logo" src="../icon/ins.svg" alt="medium">
         </a>
       </div>
     </div>
   </div>
-  <!--footer-->
+</footer>
+<!--footer-->
 
 
 </body>
