--- a/index.html
+++ b/index.html
@@ -297,7 +297,10 @@
                 <div class="img__description">
                   <div class="input-field">
                     <input type="password" id="password" placeholder="Password">
-                    <button class="passwordArr" type="submit"><i class="fas fa-chevron-right"></i>
+
+                    <button class="passwordArr" type="submit">
+                      <img  src="./icon/arrow-forward.svg" />
+                      <!--  <i class="fas fa-chevron-right"></i> -->
                     </button>
                     <div class="pwIncorrectHeight">
                       <span id="pwIncorrect">Password is incorrect </span>
