--- a/design_system/index.html
+++ b/design_system/index.html
@@ -32,7 +32,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
@@ -124,48 +126,52 @@
     </div>
   </div>
   <!--progressBarScroll-->
-  <nav class="header" id="header">
-    <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer ">VW
-      </a>
-      <div class="navbar">
-        <ul class="nav-menu">
-          <li class="dropdown nav-item active marginZero"><a href="/" class="nav-link box">PROJECT</a>
-            <div class="dropdown-content">
-              <a href="/appointa/">
-                <div class="cardBorder SEER">
-                  <img src="../image/Cover_APPOINTA.jpg" alt="APPOINTA">
-                  <div class="element">
-                    <h5 class="colorBlack">APPOINTA | For schedule interviews</h5>
-                  </div>
-                </div>
-              </a>
-              <a href="/seer/">
-                <div class="cardBorder SEER">
-                  <img src="../image/Cover_SEER.jpg" alt="SEER">
-                  <div class="element">
-                    <h5 class="colorBlack">SEER | For tracking business performance</h5>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </li>
+    <!-- header -->
+    <nav class="header" id="header">
+      <div class="backgroundColorNav">
+        <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
+        <div class="navbar">
 
+          <ul class="nav-menu">
+            <li class="dropdown nav-item active marginZero"><a href="/" class="nav-link box">PROJECT</a>
+              <div class="dropdown-content">
+                <a href="/appointa/">
+                  <div class="cardBorder SEER">
+                    <img src="../image/Cover_APPOINTA.jpg" alt="APPOINTA">
+                    <div class="element">
+                      <h5 class="colorBlack">APPOINTA | For schedule interviews</h5>
+                    </div>
+                  </div>
+                </a>
+                <a href="/seer/">
+                  <div class="cardBorder SEER">
+                    <img src="../image/Cover_SEER.jpg" alt="SEER">
+                    <div class="element">
+                      <h5 class="colorBlack">SEER | For tracking business performance</h5>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/architecture"
+                class="nav-link box font300-1080 ">ARCHITECTURE</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/photography"
+                class="nav-link box font300-1080">PHOTOGRAPHY</a>
+            </li>
+            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
+            </li>
+          </ul>
+        </div>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </div>
+    </nav>
+    <!-- header -->
 
-          <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
-          </li>
-          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box">ABOUT</a></li>
-        </ul>
-      </div>
-      <div class="hamburger">
-        <span class="bar "></span>
-        <span class="bar "></span>
-        <span class="bar "></span>
-      </div>
-    </div>
-  </nav>
   <!-- header -->
 
   <!-- header image -->
