--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
   <button id="myBtn" title="Back to top">
     <div id="dad">
       <div id="bro">
-        <img id="bottom-arrow" class="" src="./icon/arrow-top.svg" alt="back to top">
+        <img src="./icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
         <h4>TOP</h4>
