--- a/design_system/index.html
+++ b/design_system/index.html
@@ -183,7 +183,7 @@
       <img src="Mockup.png" alt="vickywang.me">
 
       <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114%3A344&viewport=91%2C-164%2C0.94&scaling=min-zoom&starting-point-node-id=1114%3A344"
+        <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114-344&viewport=626%2C1250%2C0.1&scaling=contain&starting-point-node-id=1114%3A344"
           target="_blank"> <button class="button-35 DS">Slide Deck</button></a>
       </div>
     </div>
@@ -192,7 +192,7 @@
       <div class="blankMin1880"></div>
       <img class="displayTablet" src="MockupS.png" alt="vickywang.me">
       <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114%3A344&viewport=91%2C-164%2C0.94&scaling=min-zoom&starting-point-node-id=1114%3A344"
+        <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114-344&viewport=626%2C1250%2C0.1&scaling=contain&starting-point-node-id=1114%3A344"
           target="_blank"> <button class="button-35 DS">Slide Deck</button></a>
         <div class="blankHXS"></div>
       </div>
@@ -201,7 +201,7 @@
       <div class="blankMin1880"></div>
       <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
       <div class="ProjectBannerInner">
-        <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114%3A344&viewport=91%2C-164%2C0.94&scaling=min-zoom&starting-point-node-id=1114%3A344"
+        <a href="https://www.figma.com/proto/1nkoBcKxm5LF1edGA2ytU2/vickywang.me?page-id=1111%3A139&node-id=1114-344&viewport=626%2C1250%2C0.1&scaling=contain&starting-point-node-id=1114%3A344"
           target="_blank"> <button class="button-35 DS">Slide Deck</button></a>
         <div class="blankHXS"></div>
 
