--- a/design_system/index.html
+++ b/design_system/index.html
@@ -241,9 +241,8 @@
       <div class="element">
         <div class="">
           <h3><strong>Skills</strong></h3>
-          <h4>Responsive layout</h4>
-
           <h4>Design System</h4>
+          <h4>Responsive design</h4>
           <h4>HTML&#47;CSS&#47;JavaScript</h4>
         </div>
       </div>
@@ -252,9 +251,11 @@
       <div class="element">
         <div class="">
           <h3><strong>Tool</strong></h3>
+
+          <h4>VS Code</h4>
+          <h4>WebAIM</h4>
           <h4>Figma</h4>
           <h4>Photoshop</h4>
-          <h4>VS Code</h4>
         </div>
       </div>
     </div>
