--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="wrapper">
       <div class="element">
 
-        <div class="t-hello">hello, I'm Vicky. </div>
+        <p class="t-hello">hello, I'm Vicky. </p>
 
         <div class="intro" data-aos="fade-up">
           <div class="column">
@@ -257,7 +257,7 @@
                   <img src="./image/Cover_APPOINTA.png" alt="APPOINTA">
                   <div class="element">
                     <div class="element">
-                      <h5 class="Grey700">For job interview scheduling</h5>
+                      <h5>For job interview scheduling</h5>
 
 
                       <h3 class="arrCard"><strong>APPOINTA</strong></h3>
@@ -277,7 +277,7 @@
                 <img src="./image/Cover_SEER.png" alt="SEER">
                 <div class="element">
                   <div class="element">
-                    <h5 class="Grey700">For tracking business performance</h5>
+                    <h5>For tracking business performance</h5>
                     <h3 class="arrCard"><strong>SEER</strong></h3>
                     <!--Analysis Report-->
                     <h4>Help the brand managers understand their potential users and promote their
@@ -315,7 +315,7 @@
                 </div>
                 <div class="element">
                   <div class="element">
-                    <h5 class="Grey700">Password is required </h5>
+                    <h5>Password is required </h5>
                     <h3 class="arrCard"><strong>WORK SAMPLES</strong></h3>
                     <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
                   </div>
@@ -333,7 +333,7 @@
                   <img src="./image/Cover_portfolioWeb.svg" alt="vickywang.me">
                   <div class="element">
                     <div class="element">
-                      <h5 class="Grey700">For website vickywang.me </h5>
+                      <h5>For website vickywang.me </h5>
                       <h3 class="arrCard"><strong>DESIGN SYSTEM</strong></h3>
                       <h4>Creating a design system to establish consistent branding and styling across the entire
                         website
@@ -368,7 +368,7 @@
                 <img src="./image/layout_GardenersHub.png" alt="Gardeners Hub">
                 <div class="element">
                   <div class="element">
-                    <h5 class="Grey700">For Gardeners</h5>
+                    <h5>For Gardeners</h5>
                     <h3 class="arrCard"><strong>GARDENERS HUB</strong></h3>
 
                     <h4>Find solutions and ideas to help gardeners to
@@ -387,7 +387,7 @@
                 <img src="./image/layout_AppointmentMaker.png" alt="Make appointment">
                 <div class="element">
                   <div class="element">
-                    <h5 class="Grey700">For makeing appointment</h5>
+                    <h5>For makeing appointment</h5>
                     <h3 class="arrCard"><strong>APPOINTMENT MAKER</strong></h3>
 
                     <h4>Appointment maker is a personal reminder that combines different tasks into one
@@ -405,7 +405,7 @@
                 <img src="./image/layout_MealPlanner.png" alt="Meal Planner">
                 <div class="element">
                   <div class="element">
-                    <h5 class="Grey700">For plan meal</h5>
+                    <h5>For plan meal</h5>
                     <h3 class="arrCard"><strong>MEAL PLANNER</strong></h3>
                     <h4>A single mobile app that helps people to improve their cooking experience by
                       generating a shopping list based on information from their kitchen</h4>
