--- a/design_system/index.html
+++ b/design_system/index.html
@@ -232,8 +232,12 @@
       <div class="element">
         <div class="">
           <h3><strong>Role</strong></h3>
-          <h4>Individual work</h4>
-          <h4>Design &#38; maintain</h4>
+          <h4>Design</h4>
+          <h4>Implement</h4>
+          <h4>Test</h4>
+          <h4>Iterate</h4>
+
+
         </div>
       </div>
     </div>
