--- a/about/index.html
+++ b/about/index.html
@@ -240,7 +240,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="IconS" src="IconSearch.svg" alt="se-arrow">
+            <img class="iconS" src="iconSearch.svg" alt="se-arrow">
             <h3> <strong> Understanding &#38; Testing</strong> </h3>
             <ul>
               <li> The user needs is the foremost priority.</li>
@@ -253,7 +253,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="IconS" src="IconCategory.svg" alt="se-arrow">
+            <img class="iconS" src="IconCategory.svg" alt="se-arrow">
             <h3> <strong> Structure &#38; Prioritization</strong> </h3>
             <ul>
               <li>Structure the flow to support the core functions</li>
@@ -269,7 +269,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="IconS" src="iconBrush.svg" alt="se-arrow">
+            <img class="iconS" src="iconBrush.svg" alt="se-arrow">
 
 
             <h3> <strong> Consistency &#38; Minimalism</strong> </h3>
@@ -285,7 +285,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="IconS" src="IconDocument.svg" alt="se-arrow">
+            <img class="iconS" src="IconDocument.svg" alt="se-arrow">
 
 
             <h3> <strong> Learning &#38; Improving</strong> </h3>
