--- a/appointa/index.html
+++ b/appointa/index.html
@@ -174,7 +174,7 @@
     <div class="blankHS"></div>
     <div class="ProjectBanner displayLaptop">
       <div class="blankMin1880"></div>
-      <img class="" src="Mockup.png" alt="APPOINTA">
+      <img src="Mockup.png" alt="APPOINTA">
 
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=677%2C117%2C0.12&scaling=scale-down&starting-point-node-id=1714%3A9456"
@@ -380,7 +380,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="Grid">
-            <img class="" src="diagram_timeline.svg" alt="Pain points">
+            <img src="diagram_timeline.svg" alt="Pain points">
           </div>
         </div>
       </div>
@@ -413,7 +413,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="Grid">
-            <img class="" src="diagram_designThinking.svg" alt="se-arrow">
+            <img src="diagram_designThinking.svg" alt="se-arrow">
 
           </div>
         </div>
@@ -948,7 +948,7 @@
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
                   <h4 class="">
                     <p>Recruiters main touchpoints</p>
-                    <img class="" src="Diagram_1.svg" alt="Diagram">
+                    <img src="Diagram_1.svg" alt="Diagram">
 
 
                   </h4>
@@ -958,7 +958,7 @@
 
                     <p>The reason why scheduling is time consuming:</p>
 
-                    <img class="" src="Diagram_2.svg" alt="Diagram">
+                    <img src="Diagram_2.svg" alt="Diagram">
                   </h4>
                 </div>
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
@@ -1141,7 +1141,7 @@
                 <div class="Grid-cell">
                   <div class="element">
                     <div class="elementInnerL cardAPPOINTA heightM">
-                      <img class="iconM" src="iconShare.svg" alt="se-arrow">
+                      <img class="iconM" src="iconSHare.svg" alt="se-arrow">
 
                       <div class="blankHXS"></div>
 
@@ -2105,7 +2105,7 @@
                     </li>
                     <li class="item">
                       <input type="radio" id="callout" name="UI" />
-                      <label class="callout" for="callout">Callouts and icons</label>
+                      <label class="callout" for="callout">Callouts and iconS</label>
                       <div class="content-test">
                         <img class="shadowFilterL" src="Components_callout.svg" alt="Components">
                       </div>
@@ -2320,7 +2320,7 @@
   <button id="myBtn" title="Back to top">
     <div id="dad">
       <div id="bro">
-        <img id="bottom-arrow" class="" src="../../icon/arrow-top.svg" alt="back to top">
+        <img id="bottom-arrow" src="../../icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
         <h4>TOP</h4>
