--- a/appointment_maker/index.html
+++ b/appointment_maker/index.html
@@ -1684,7 +1684,7 @@
     <div class="rowChng centerHorz alignCPH">
       <div
         class="rowVW align-top widthM padding-s marginElm float align-left ShadowBox border-radius  ">
-        <img class="IconS" src="list.svg" alt="&bull;">
+        <img class="iconS" src="list.svg" alt="&bull;">
         <div class="column ">
           <P class="titleM">Competitive audit goal </P>
           <div class="column">
@@ -1700,7 +1700,7 @@
 
       <div
         class="rowVW align-top widthM padding-s marginElm float align-left ShadowBox border-radius  ">
-        <img class="IconS" src="list.svg" alt="&bull;">
+        <img class="iconS" src="list.svg" alt="&bull;">
         <div class="column">
           <P class="titleM">Key competitors:</P>
           <div class="column">
@@ -1720,7 +1720,7 @@
 
       <div
         class="rowVW align-top widthM padding-s marginElm float align-left ShadowBox border-radius  ">
-        <img class="IconS" src="list.svg" alt="&bull;">
+        <img class="iconS" src="list.svg" alt="&bull;">
         <div class="column">
           <P class="titleM">Quality of competitors&apos; products:</P>
           <div class="column">
@@ -1745,7 +1745,7 @@
     <div class="rowChng centerHorz alignCPH">
       <div
         class="rowVW align-top widthM padding-s marginElm float align-left ShadowBox border-radius  ">
-        <img class="IconS" src="list.svg" alt="&bull;">
+        <img class="iconS" src="list.svg" alt="&bull;">
         <div class="column">
           <P class="titleM">Competitors market</P>
           <div class="column">
@@ -1769,7 +1769,7 @@
 
       <div
         class="rowVW align-top widthM padding-s marginElm float align-left ShadowBox border-radius  ">
-        <img class="IconS" src="list.svg" alt="&bull;">
+        <img class="iconS" src="list.svg" alt="&bull;">
         <div class="column">
           <P class="titleM">Competitors self promotion:</P>
           <div class="column">
@@ -1793,7 +1793,7 @@
 
       <div
         class="rowVW align-top widthM padding-s marginElm float align-left ShadowBox border-radius  ">
-        <img class="IconS" src="list.svg" alt="&bull;">
+        <img class="iconS" src="list.svg" alt="&bull;">
         <div class="column">
           <P class="titleM">Competitors&apos; strengths: </P>
           <div class="column">
@@ -1825,7 +1825,7 @@
 
       <div
         class="rowVW align-top widthM padding-s marginElm float align-left ShadowBox border-radius  ">
-        <img class="IconS" src="list.svg" alt="&bull;">
+        <img class="iconS" src="list.svg" alt="&bull;">
         <div class="column">
           <P class="titleM">Competitors&apos; weaknesses </P>
           <div class="column">
@@ -1846,7 +1846,7 @@
 
       <div
         class="rowVW align-top widthM padding-s marginElm float align-left ShadowBox border-radius  ">
-        <img class="IconS" src="list.svg" alt="&bull;">
+        <img class="iconS" src="list.svg" alt="&bull;">
         <div class="column">
           <P class="titleM">Gaps </P>
           <div class="column">
@@ -1866,7 +1866,7 @@
 
       <div
         class="rowVW align-top widthM padding-s marginElm float align-left ShadowBox border-radius  ">
-        <img class="IconS" src="list.svg" alt="&bull;">
+        <img class="iconS" src="list.svg" alt="&bull;">
         <div class="column">
           <P class="titleM">Opportunities: </P>
           <div class="column">
