--- a/design_system/index.html
+++ b/design_system/index.html
@@ -230,15 +230,11 @@
 
     <div class="Grid-cell">
       <div class="element">
-        <div class="">
           <h3><strong>Role</strong></h3>
           <h4>Design</h4>
           <h4>Implement</h4>
           <h4>Test</h4>
           <h4>Iterate</h4>
-
-
-        </div>
       </div>
     </div>
     <div class="Grid-cell">
@@ -1022,7 +1018,7 @@
       <p class="tArrow">Icon &#38; button <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
     <div class="element">
-      <h3>Icons</h3>
+      <h3>iconS</h3>
     </div>
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="Grid-cell">
