--- a/gardeners_hub/index.html
+++ b/gardeners_hub/index.html
@@ -431,7 +431,7 @@
     <div class="column">
       <div class="rowVW">
         <P class="titleM">USER RESEARCH </P>
-        <img class="IconS float" src="icon_userResearch.svg" alt="User Research">
+        <img class="iconS float" src="icon_userResearch.svg" alt="User Research">
       </div>
       <p class="textM">to understand the problems of the goal and context of use of potential
         users I used some blockbusting activity and applied different technicals to better analyze
@@ -471,7 +471,7 @@
     <div class="column">
       <div class="rowVW">
         <P class="titleM">COMPETITIVE ANALYSIS</P>
-        <img class="IconS float" src="icon_competitor.svg" alt="User Research">
+        <img class="iconS float" src="icon_competitor.svg" alt="User Research">
       </div>
       <p class="textM">Based on identifying and comparing current horticulture website futures,
         analysis how they addressed similar problems.</p>
@@ -1101,7 +1101,7 @@
     <div class="column margin">
       <div class="rowVW">
         <P class="titleM">CONTEXTUAL INQUIRIES </P>
-        <img class="IconS float" src="icon_contextualInquiries.svg" alt="User Research">
+        <img class="iconS float" src="icon_contextualInquiries.svg" alt="User Research">
       </div>
       <p class="textM">I conducted four contextual inquiries by accompanying our target users
         on their site with 6 months, 12 months, and more than 18 months of horticultural
@@ -1254,7 +1254,7 @@
     <div class="column">
       <div class="rowVW">
         <P class="titleM">IDENTIFYING PAIN POINTS</P>
-        <img class="IconS float" src="icon_painpoints.svg" alt="User Research">
+        <img class="iconS float" src="icon_painpoints.svg" alt="User Research">
       </div>
       <p class="textM">Based on the information collected from contextual inquiries and user
         interviews, I used affinity mapping to group the pain points into similar categories on a
