--- a/meal_planner/index.html
+++ b/meal_planner/index.html
@@ -301,7 +301,7 @@
           <div class="Grid Grid--gutters Grid--nested heightM">
 
             <div class="column centerVer padding widthXS">
-              <img class="IconS" src="f_icon_equipment.svg" alt="Equipment">
+              <img class="iconS" src="f_icon_equipment.svg" alt="Equipment">
               <div class="lineHorizAll-mp"></div>
               <h2> Equipment</h2>
             </div>
@@ -323,7 +323,7 @@
           <div class="Grid Grid--gutters Grid--nested heightM">
 
             <div class="column centerVer padding widthXS">
-              <img class="IconS" src="f_icon_recipe.svg" alt="Equipment">
+              <img class="iconS" src="f_icon_recipe.svg" alt="Equipment">
               <div class="lineHorizAll-mp"></div>
               <h2> Recipe</h2>
             </div>
@@ -348,7 +348,7 @@
           <div class="Grid Grid--gutters Grid--nested heightM">
 
             <div class="column centerVer padding widthXS">
-              <img class="IconS" src="f_icon_pantry.svg" alt="Equipment">
+              <img class="iconS" src="f_icon_pantry.svg" alt="Equipment">
               <div class="lineHorizAll-mp"></div>
               <h2> Inventory</h2>
             </div>
@@ -368,7 +368,7 @@
           <div class="Grid Grid--gutters Grid--nested heightM">
 
             <div class="column centerVer padding widthXS">
-              <img class="IconS" src="f_icon_shoppinglist.svg" alt="Equipment">
+              <img class="iconS" src="f_icon_shoppinglist.svg" alt="Equipment">
               <div class="lineHorizAll-mp"></div>
               <h2> Shopping List </h2>
             </div>
@@ -689,7 +689,7 @@
     <div class="column wrapper">
       <div class="rowVW padding-tb">
         <P class="titleM">DESIGN STRATEGY </P>
-        <img class="IconS float" src="icon_mp_1-1.svg" alt="User Research">
+        <img class="iconS float" src="icon_mp_1-1.svg" alt="User Research">
       </div>
       <p class="textM">
         to understand the problems of the goal and context of use of potential
@@ -824,7 +824,7 @@
   <div class="column wrapper">
     <div class="rowVW">
       <P class="titleM">USER RESEARCH </P>
-      <img class="IconS float" src="icon_mp_1-2.svg" alt="User Research">
+      <img class="iconS float" src="icon_mp_1-2.svg" alt="User Research">
     </div>
     <div class="blankHM"></div>
     <P class="titleM">Conduct user interviews </P>
@@ -1109,7 +1109,7 @@
     <div class="column wrapper ">
       <div class="rowVW padding-tb">
         <P class="titleM"> Key Findings from the Pains and Gains </P>
-        <img class="IconS float" src="icon_mp_2-1.svg" alt="User Research">
+        <img class="iconS float" src="icon_mp_2-1.svg" alt="User Research">
       </div>
     </div>
 
@@ -1198,7 +1198,7 @@
   <div class="column wrapper ">
     <div class="rowVW">
       <P class="titleM">USER FLOW </P>
-      <img class="IconS float" src="icon_mp_3-1.svg" alt="User Research">
+      <img class="iconS float" src="icon_mp_3-1.svg" alt="User Research">
     </div>
     <p class="textM">A User Flow is a route map for the user to navigate from
       the entry point to the end point in order to complete a task in the user interface. the
@@ -1715,7 +1715,7 @@
   <div class="column wrapper ">
     <div class="rowVW">
       <P class="titleM">CARD SORTING </P>
-      <img class="IconS float" src="icon_mp_3-2.svg" alt="User Research">
+      <img class="iconS float" src="icon_mp_3-2.svg" alt="User Research">
     </div>
     <p class="textM">Card sorting is a method used to help design or evaluate
       the information architecture of a site. In a card sorting session, participants organize
@@ -1831,7 +1831,7 @@
 
     <div class="rowVW  align-top">
       <P class="titleM">WIREFRAMES </P>
-      <img class="IconS float" src="icon_mp_4-1.svg" alt="User Research">
+      <img class="iconS float" src="icon_mp_4-1.svg" alt="User Research">
     </div>
     <div class="blankHM"></div>
     <p class="textM">MID-FIDELITY WIREFRAMES</p>
@@ -1887,7 +1887,7 @@
   <div class="column wrapper ">
     <div class="rowVW">
       <P class="titleM">USABILITY TESTING </P>
-      <img class="IconS float" src="icon_mp_4-2.svg" alt="User Research">
+      <img class="iconS float" src="icon_mp_4-2.svg" alt="User Research">
     </div>
     <p class="textM">Usability testing refers to evaluating a product or service
       by testing it with representative users. Typically, during a test, participants will
