--- a/about/index.html
+++ b/about/index.html
@@ -240,7 +240,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="elementInner cardBorder shadowBoxLt">
-            <img class="iconS" src="iconSearch.svg" alt="se-arrow">
+            <img class="iconS" src="IconSearch.svg" alt="se-arrow">
             <h3> <strong> Understanding &#38; Testing</strong> </h3>
             <ul>
               <li> The user needs is the foremost priority.</li>
