--- a/gardeners_hub/index.html
+++ b/gardeners_hub/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="VICKY WANG" />
   <meta property="og:description" content="Hi! Thanks for stopping by. 
   I enjoy design and code who loves solving challenging problems. 
-  Interested in what you see? Shoot me an email :) " />
+  Interested in what you see? Shoot me an email" />
   <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
