--- a/photography/index.html
+++ b/photography/index.html
@@ -173,7 +173,7 @@
           <div class="intro">
             <h1> Photographs &nbsp;</h1>
             <span class="divider1"></span>
-            <h1> Nature &#38; Wildlife </h1>
+            <h1> Nature &#38; wildlife </h1>
           </div>
         </strong>
       </div>
