--- a/index.html
+++ b/index.html
@@ -247,22 +247,20 @@
     <!-- Arrow -->
     <div class="blankHS"></div>
     <!-- projects -->
+    
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
           <div class="element">
-            <a href="/appointa/">
+            <a href="/glorify/">
               <div class="">
                 <div class="elementCard float cardBorder APPOINTA shadowBoxLt">
-                  <img src="./image/Cover_APPOINTA.png" alt="APPOINTA">
+                  <img src="./image/Cover_Glorify.png" alt="APPOINTA">
                   <div class="element">
                     <div class="element">
-                      <h5>For job interview scheduling</h5>
-
-
-                      <h3 class="arrCard"><strong>APPOINTA</strong></h3>
-                      <h4>Streamline the job interview scheduling process to make it more efficient,
-                        convenient, and intuitive</h4>
+                      <h5>For daily worship</h5>
+                      <h3 class="arrCard"><strong>GLORIFY</strong></h3>
+                      <h4>Crafting the Glorify community experience for xxxxx xxxxx xxxxx xxxxx xxxxx xxxxx xxxxx</h4>
                     </div>
                   </div>
                 </div>
@@ -270,28 +268,6 @@
             </a>
           </div>
         </div>
-        <div class="Grid-cell">
-          <div class="element">
-            <a href="/seer/">
-              <div class="elementCard float cardBorder SEER shadowBoxLt">
-                <img src="./image/Cover_SEER.png" alt="SEER">
-                <div class="element">
-                  <div class="element">
-                    <h5>For tracking business performance</h5>
-                    <h3 class="arrCard"><strong>SEER</strong></h3>
-                    <!--Analysis Report-->
-                    <h4>Help the brand managers understand their potential users and promote their
-                      brand on Reddit</h4>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="Grid Grid--gutters Grid--cols-2">
 
         <div class="Grid-cell">
           <div class="element">
@@ -325,6 +301,51 @@
             </a>
           </div>
         </div>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2">
+        <div class="Grid-cell">
+          <div class="element">
+            <a href="/appointa/">
+              <div class="">
+                <div class="elementCard float cardBorder APPOINTA shadowBoxLt">
+                  <img src="./image/Cover_APPOINTA.png" alt="APPOINTA">
+                  <div class="element">
+                    <div class="element">
+                      <h5>For job interview scheduling</h5>
+                      <h3 class="arrCard"><strong>APPOINTA</strong></h3>
+                      <h4>Streamline the job interview scheduling process to make it more efficient,
+                        convenient, and intuitive</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <a href="/seer/">
+              <div class="elementCard float cardBorder SEER shadowBoxLt">
+                <img src="./image/Cover_SEER.png" alt="SEER">
+                <div class="element">
+                  <div class="element">
+                    <h5>For tracking business performance</h5>
+                    <h3 class="arrCard"><strong>SEER</strong></h3>
+                    <!--Analysis Report-->
+                    <h4>Help the brand managers understand their potential users and promote their
+                      brand on Reddit</h4>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="Grid Grid--gutters Grid--cols-2">
+
+
         <div class="Grid-cell">
           <div class="element">
             <a href="/design_system/">
@@ -345,6 +366,9 @@
               </div>
             </a>
           </div>
+        </div>
+        <div class="Grid-cell">
+
         </div>
       </div>
     </div>
