--- a/glorify/index.html
+++ b/glorify/index.html
@@ -285,56 +285,110 @@
 
   <div class="blankHM"></div>
 
-  <div class="colorBgGLORIFY ">
+  <div class="colorBgGLORIFY">
 
-    <section class="carousel wrapper" aria-label="Gallery">
-      <ol class="carousel__viewport">
-        <li id="carousel__slide1" tabindex="0" class="carousel__slide">
-          <div class="carousel__snapper">
-            <a href="#carousel__slide4" class="carousel__prev">Go to last slide</a>
-            <a href="#carousel__slide2" class="carousel__next">Go to next slide</a>
-          </div>
-        </li>
-        <li id="carousel__slide2" tabindex="0" class="carousel__slide">
-          <div class="carousel__snapper"></div>
-          <a href="#carousel__slide1" class="carousel__prev">Go to previous slide</a>
-          <a href="#carousel__slide3" class="carousel__next">Go to next slide</a>
-        </li>
-        <li id="carousel__slide3" tabindex="0" class="carousel__slide">
-          <div class="carousel__snapper"></div>
-          <a href="#carousel__slide2" class="carousel__prev">Go to previous slide</a>
-          <a href="#carousel__slide4" class="carousel__next">Go to next slide</a>
-        </li>
-        <li id="carousel__slide4" tabindex="0" class="carousel__slide">
-          <div class="carousel__snapper"></div>
-          <a href="#carousel__slide3" class="carousel__prev">Go to previous slide</a>
-          <a href="#carousel__slide1" class="carousel__next">Go to first slide</a>
-        </li>
-      </ol>
-      <aside class="carousel__navigation">
-        <ol class="carousel__navigation-list">
-          <li class="carousel__navigation-item">
-            <a href="#carousel__slide1" class="carousel__navigation-button">Go to slide 1</a>
-          </li>
-          <li class="carousel__navigation-item">
-            <a href="#carousel__slide2" class="carousel__navigation-button">Go to slide 2</a>
-          </li>
-          <li class="carousel__navigation-item">
-            <a href="#carousel__slide3" class="carousel__navigation-button">Go to slide 3</a>
-          </li>
-          <li class="carousel__navigation-item">
-            <a href="#carousel__slide4" class="carousel__navigation-button">Go to slide 4</a>
-          </li>
-        </ol>
-      </aside>
-    </section>
+
 
   </div>
 
-  <div class="blankHM"></div>
-
-
-
+  <div class="containerNew">
+    <div class="carouselNew">
+      <input type="radio" name="slides" checked="checked" id="slide-1">
+      <input type="radio" name="slides" id="slide-2">
+      <input type="radio" name="slides" id="slide-3">
+      <input type="radio" name="slides" id="slide-4">
+      <input type="radio" name="slides" id="slide-5">
+      <input type="radio" name="slides" id="slide-6">
+      <ul class="carousel__slides">
+        <li class="carousel__slide">
+          <figure>
+            <div>
+              <img src="https://picsum.photos/id/1041/800/450" alt="">
+            </div>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="credit">Photo: Tim Marshall</span>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="carousel__slide">
+          <figure>
+            <div>
+              <img src="https://picsum.photos/id/1043/800/450" alt="">
+            </div>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="credit">Photo: Christian Joudrey</span>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="carousel__slide">
+          <figure>
+            <div>
+              <img src="https://picsum.photos/id/1044/800/450" alt="">
+            </div>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="credit">Photo: Steve Carter</span>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="carousel__slide">
+          <figure>
+            <div>
+              <img src="https://picsum.photos/id/1045/800/450" alt="">
+            </div>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="credit">Photo: Aleksandra Boguslawska</span>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="carousel__slide">
+          <figure>
+            <div>
+              <img src="https://picsum.photos/id/1049/800/450" alt="">
+            </div>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="credit">Photo: Rosan Harmens</span>
+            </figcaption>
+          </figure>
+        </li>
+        <li class="carousel__slide">
+          <figure>
+            <div>
+              <img src="https://picsum.photos/id/1052/800/450" alt="">
+            </div>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <span class="credit">Photo: Annie Spratt</span>
+            </figcaption>
+          </figure>
+        </li>
+      </ul>
+      <ul class="carousel__thumbnails">
+        <li>
+          <label for="slide-1"><img src="https://picsum.photos/id/1041/150/150" alt=""></label>
+        </li>
+        <li>
+          <label for="slide-2"><img src="https://picsum.photos/id/1043/150/150" alt=""></label>
+        </li>
+        <li>
+          <label for="slide-3"><img src="https://picsum.photos/id/1044/150/150" alt=""></label>
+        </li>
+        <li>
+          <label for="slide-4"><img src="https://picsum.photos/id/1045/150/150" alt=""></label>
+        </li>
+        <li>
+          <label for="slide-5"><img src="https://picsum.photos/id/1049/150/150" alt=""></label>
+        </li>
+        <li>
+          <label for="slide-6"><img src="https://picsum.photos/id/1052/150/150" alt=""></label>
+        </li>
+      </ul>
+    </div>
+  </div>
 
 
 
