--- a/glorify/index.html
+++ b/glorify/index.html
@@ -27,6 +27,8 @@
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
+  <script type="text/javascript" src="../scripts_project.js"></script>
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -284,6 +286,21 @@
   </div>
 
   <div class="blankHM"></div>
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--1of6">
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo content-1of6"></div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="Demo">
+          <div class="elementInnerDemo">auto</div>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
   <div class="colorBgGLORIFY">
 
