--- a/navigation/index.html
+++ b/navigation/index.html
@@ -177,7 +177,7 @@
     <p>Space filler</p>
   </div>
   <main>
-    <nav class="HorizNav ">
+    <nav class="HorizNav">
       <ol class="HorizNavItem">
         <li><a href="#c1" class="custom-btn btn-5">Content 1</a></li>
         <P class="lineHorizAll"></P>
@@ -325,18 +325,19 @@
       <section id="contentOne" class="wrapper">
         <div class="Grid Grid--gutters Grid--1of6">
           <div class="Grid-cell">
-            <nav class="section-nav APPOINTA">
+
+            <nav class="subNav">
               <ol>
-                <li><a href="#subContentOne" class="titleRightPanel">C2 - SC 1</a>
+                <li><a href="#subContentOne" class="newTitlePanel">C2 - SC 1</a>
                   <ul>
-                    <li class="rightPanel"><a href="#subTitle1-1">Title 1 </a></li>
-                    <li class="rightPanel"><a href="#subTitle1-2">Title 2 </a></li>
+                    <li class="newPanel"><a href="#subTitle1-1">Title 1 </a></li>
+                    <li class="newPanel"><a href="#subTitle1-2">Title 2 </a></li>
                   </ul>
                 </li>
-                <li><a href="#subContentTwo" class="titleRightPanel">C2 - SC 2</a>
+                <li><a href="#subContentTwo" class="newTitlePanel">C2 - SC 2</a>
                   <ul>
-                    <li class="rightPanel"><a href="#subTitle2-1">Title 1 </a></li>
-                    <li class="rightPanel"><a href="#subTitle2-2">Title 2</a></li>
+                    <li class="newPanel"><a href="#subTitle2-1">Title 1 </a></li>
+                    <li class="newPanel"><a href="#subTitle2-2">Title 2</a></li>
                   </ul>
                 </li>
               </ol>
