--- a/index.html
+++ b/index.html
@@ -252,15 +252,15 @@
       <div class="Grid Grid--gutters Grid--cols-2">
         <div class="Grid-cell">
           <div class="element">
-            <a href="/glorify/">
+            <a href="https://www.figma.com/proto/vyaxcMop5XlC6W1g37NA3Q/Community---Glorify?page-id=332%3A16494&node-id=332-19611&viewport=1671%2C430%2C0.04&scaling=contain&starting-point-node-id=332%3A19611">
               <div class="">
-                <div class="elementCard float cardBorder APPOINTA shadowBoxLt">
-                  <img src="./image/Cover_Glorify.png" alt="APPOINTA">
+                <div class="elementCard float cardBorder GLORIFY shadowBoxLt">
+                  <img src="./image/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
                     <div class="element">
                       <h5>For daily worship</h5>
                       <h3 class="arrCard"><strong>GLORIFY</strong></h3>
-                      <h4>Crafting the Glorify community experience for xxxxx xxxxx xxxxx xxxxx xxxxx xxxxx xxxxx</h4>
+                      <h4>Integrating a community experience into the existing Glorify Application</h4>
                     </div>
                   </div>
                 </div>
@@ -344,13 +344,10 @@
 
 
       <div class="Grid Grid--gutters Grid--cols-2">
-
-
         <div class="Grid-cell">
           <div class="element">
             <a href="/design_system/">
               <div class="">
-
                 <div class="elementCard float cardBorder shadowBoxLt">
                   <img src="./image/Cover_portfolioWeb.svg" alt="vickywang.me">
                   <div class="element">
@@ -368,7 +365,23 @@
           </div>
         </div>
         <div class="Grid-cell">
-
+          <div class="element">
+            <a href="/navigation/">
+              <div class="">
+                <div class="elementCard float cardBorder shadowBoxLt">
+                  <img src="./image/Cover_portfolioWeb.svg" alt="vickywang.me">
+                  <div class="element">
+                    <div class="element">
+                      <h5>For website case study &#64; vickywang.me </h5>
+                      <h3 class="arrCard"><strong>NAVIGATION SYSTEM</strong></h3>
+                      <h4>Developing a more structured and logical navigation system for displaying case studies
+                      </h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
     </div>
